--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,52 @@
-body{
-    flex: 1;
-    padding: 0;
+html, body {
+    height: 100%;
     margin: 0;
-    box-sizing: border-box;
-}
-
-#main-container{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#main-container {
+    display: flex;
     flex-direction: column;
-    flex: 1;
+    justify-content: center;
+    align-items: center;
 }
 
 
 #icons{
     display: flex;
+    flex: 1;
     flex-direction: row;
-    align-items: center;
 }
 
-.option-UI{
-    flex-direction: column;
+.icon{
+    height: 100px;
+}
+
+.choice{
+    height: 300px;
 }
 
 #rps-buttons{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    padding: 20px;
 }
 
 .btn{
     margin: 20px;
-    width: 80px;
-    height: 30px;
+    width: 85px;
+    height: 50px;
     border-radius: 20px;
     border: none;
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-#player-icon #computer-icon{
+.option-UI{
     display: flex;
-    max-height: 250px;
-} 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
